--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -185,7 +185,8 @@
 }
 
 #custom-power {
-  margin-left: 15px;
-  margin-right: 15px;
-  font-size: 15px;
+  margin-left: 10px;
+  margin-right: 20px;
+  font-size: 25px;
+  font-weight: bold;
 }
