--- a/gtklock/.config/gtklock/style.css
+++ b/gtklock/.config/gtklock/style.css
@@ -1,6 +1,7 @@
 * {
   border: none;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8);
+  color: white;
 }
 window {
   background-image: url("cat_leaves.png");
@@ -23,11 +24,13 @@ window {
   background-color: rgba(127, 63, 191, 0.9);
 }
 #input-field {
-  border-radius: 10px;
+  border-radius: 20px;
   background-color: rgba(127, 127, 255, 0.1);
   border: 2px solid rgba(127, 63, 191, 0.5);
   padding-top: 5px;
+  font-weight: 700;
   padding-bottom: 5px;
+  font-size: 30px;
 }
 #powerbar-box button {
   background: none;
