--- a/hypr/dot-config/waybar/dark.css
+++ b/hypr/dot-config/waybar/dark.css
@@ -1,16 +1,10 @@
-/* Catppuccin Mocha (Dark Theme) Variables */
-
-@define-color base1 #1e1e2e; /* Base background color (Mocha Base) */
-@define-color base2 #313244; /* Slightly lighter background (Mocha Mantle) */
-
-@define-color text #cdd6f4; /* Foreground text color (Mocha Text) */
-@define-color subtext #a6adc8; /* Secondary text color (Mocha Subtext1) */
-
-@define-color highlight #89b4fa; /* Accent/Highlight color (Mocha Blue) */
-
+@define-color base1 #1e1e2e;
+@define-color base2 #313244;
+@define-color text #cdd6f4;
+@define-color subtext #a6adc8;
+@define-color highlight #89b4fa;
 @define-color red #f38ba8;
 @define-color yellow #f9e2af;
 @define-color green #a6e3a1;
-
-/* Waybar Border Color */
-@define-color border #45475a; /* A noticeable but subtle gray border (Mocha Surface1) */
+@define-color special #40a02b;
+@define-color border #45475a;
