--- a/hypr/dot-config/waybar/style.css
+++ b/hypr/dot-config/waybar/style.css
@@ -91,11 +91,15 @@ window#waybar {
   margin: 0 2px;
 }
 
-#workspaces button.focused {
+#workspaces button.active {
   border: 3px solid @highlight; /* Uses imported variable */
   font-weight: bold;
 }
 
+#workspaces button.special {
+  border: 3px solid @special; /* Uses imported variable */
+  color: @green; /* Uses imported variable */
+}
 #workspaces button.urgent {
   border: 3px solid @red; /* Uses imported variable */
   color: @red; /* Uses imported variable */
