--- a/hypr/dot-config/wlogout/style.css
+++ b/hypr/dot-config/wlogout/style.css
@@ -1,3 +1,4 @@
+@define-color background #7287fd;
 * {
   font-weight: 700;
   font-size: 30px;
@@ -24,45 +25,26 @@ button {
 }
 
 button:hover {
-  background-color: rgba(49, 50, 68, 0.1);
+  background-color: @background;
 }
 
 button:focus {
-  background-color: #cba6f7;
+  background-color: @background;
   color: #1e1e2e;
 }
 
 #lock {
   background-image: image(url("./lock.png"));
 }
-#lock:focus {
-  background-image: image(url("./lock-hover.png"));
-}
-
 #logout {
   background-image: image(url("./logout.png"));
 }
-#logout:focus {
-  background-image: image(url("./logout-hover.png"));
-}
-
 #suspend {
   background-image: image(url("./sleep.png"));
 }
-#suspend:focus {
-  background-image: image(url("./sleep-hover.png"));
-}
-
 #shutdown {
   background-image: image(url("./power.png"));
 }
-#shutdown:focus {
-  background-image: image(url("./power-hover.png"));
-}
-
 #reboot {
   background-image: image(url("./restart.png"));
-}
-#reboot:focus {
-  background-image: image(url("./restart-hover.png"));
 }
