--- a/hypr/dot-config/waybar/theme.css
+++ b/hypr/dot-config/waybar/theme.css
@@ -1,10 +1,10 @@
-@define-color base1 #1e1e2e;
-@define-color base2 #313244;
-@define-color text #cdd6f4;
-@define-color subtext #a6adc8;
-@define-color highlight #89b4fa;
-@define-color red #f38ba8;
-@define-color yellow #f9e2af;
-@define-color green #a6e3a1;
-@define-color special #40a02b;
-@define-color border #45475a;
+@define-color base1 #eff1f5;
+@define-color base2 #e6e9ed;
+@define-color text #4c4f69;
+@define-color subtext #626880;
+@define-color highlight #626880;
+@define-color red #d20f39;
+@define-color yellow #df8e1d;
+@define-color green #40a02b;
+@define-color special #a6e3a1;
+@define-color border #00000f;
