--- a/hypr/dot-config/wlogout/style.css
+++ b/hypr/dot-config/wlogout/style.css
@@ -1,4 +1,4 @@
-@define-color background #7287fd;
+@define-color background #000000;
 * {
   font-weight: 700;
   font-size: 30px;
@@ -17,7 +17,7 @@ button {
   background-position: center;
   background-size: 25%;
   border-radius: 30px;
-  background-color: #1e1e2e;
+  background-color: rgba(30, 30, 46, 0.5);
   margin: 5px;
   transition:
     box-shadow 0.2s ease-in-out,
